--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Some page</title>
 </head>
 <body>
-    <h1>Sit enim sint nostrud amet elit.</h1>
-    <p>Laborum et cupidatat nisi nisi aliqua. Aute occaecat ex aliquip fugiat adipisicing anim veniam aute voluptate labore dolor consectetur esse laboris.</p>
+    <h1 align="center">Sit enim sint nostrud amet elit.</h1>
+    <p align="right"><img alt="Some pic" width="100" title="some title" src="images/100.jpg"><em><b>Laborum</b> et cupidatat nisi nisi aliqua.</em> Aute occaecat ex aliquip fugiat adipisicing anim veniam aute voluptate labore dolor consectetur esse laboris.</p>
 
     <h2>Officia culpa labore dolore duis</h2> 
     <p>Officia id laboris deserunt do Lorem nulla incididunt sunt laboris. Deserunt duis incididunt anim et dolore ad minim veniam eiusmod tempor laborum eu irure. Fugiat nisi velit eu dolore laboris anim nostrud reprehenderit dolore quis cupidatat do ut. Ad ipsum aute non qui adipisicing ut fugiat. Ullamco fugiat nisi do est aliqua qui.</p>
@@ -22,7 +22,11 @@
 
     <p>Sit duis sunt sit deserunt cillum est sunt et consectetur nostrud cillum esse nisi. Quis sint deserunt nulla in. Est sunt nulla laborum nulla aliqua.</p>
 
+    <p align="center"><img alt="" src="images/1.jpg"></p>
+
     <p>Id eu enim esse eiusmod ex ullamco non nostrud exercitation eu tempor magna cupidatat. Cupidatat ea pariatur labore Lorem ad consectetur id officia laboris sit eu officia incididunt anim. Ea et reprehenderit velit reprehenderit.</p>
+
+    <p align="center"><img alt="" src="images/2.jpg"></p>
 
     <p>Voluptate aute in mollit proident veniam. Dolore cupidatat adipisicing duis ad nisi ipsum laborum amet Lorem aliquip sint. Duis amet deserunt cillum pariatur elit reprehenderit fugiat tempor Lorem ad non. Anim voluptate veniam minim enim dolore consequat ad id ex ex. Ipsum laboris cillum excepteur aliqua enim labore excepteur officia elit magna velit enim Lorem. Amet aliqua est est nostrud consectetur velit aute. Laboris ex aliquip laboris reprehenderit reprehenderit elit est.</p>
 
@@ -30,10 +34,17 @@
 
     <p>Sit do anim minim aute consequat exercitation dolore dolor nisi voluptate pariatur esse. Magna aute pariatur commodo esse et dolore ut nisi irure. Incididunt magna aute occaecat proident laborum exercitation consequat. Ipsum voluptate proident incididunt amet ex. Amet amet tempor nulla mollit esse officia culpa anim nulla nostrud ad nulla laboris laborum. Non in mollit laborum eiusmod officia tempor tempor aliqua.</p>
 
+    <p align="center"><img alt="" src="images/3.jpg"></p>
+
     <p>Duis veniam id eu commodo occaecat elit Lorem nostrud culpa laboris dolor tempor cupidatat aliqua. Irure sit laboris exercitation voluptate et exercitation occaecat ut irure sit consectetur culpa sint esse. Laborum do duis veniam qui sit Lorem sint enim irure nisi veniam eu. Adipisicing exercitation consequat labore ut occaecat laborum qui et labore eiusmod in. Veniam adipisicing tempor dolore in sint enim velit ullamco Lorem ut qui aliqua aute veniam. Labore esse ad occaecat culpa et dolor. Veniam fugiat ad deserunt minim sint aliquip eiusmod ad enim anim nisi.</p>
+
+    <p align="center"><img alt="" src="images/4.jpg"></p>
 
     <h2>Non veniam nostrud cupidatat minim</h2>
 
     <p>Fliqua et dolore duis adipisicing irure incididunt excepteur reprehenderit ad. Tempor cupidatat commodo duis deserunt dolore. Quis culpa aliqua qui anim quis eu sit cillum aliquip adipisicing officia veniam aliqua enim. Adipisicing in elit minim laboris dolore eiusmod et. Nisi aliquip in laboris ex irure ex commodo eiusmod fugiat deserunt. Deserunt ipsum officia ullamco excepteur laboris fugiat.</p>
+
+    <p align="center"><img alt="" src="images/5.jpg"></p>
+
 </body>
 </html>
