--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1 align="center">Sit enim sint nostrud amet elit.</h1>
-    <p align="right"><img alt="Some pic" width="100" title="some title" src="images/100.jpg"><em><b>Laborum</b> et cupidatat nisi nisi aliqua.</em> Aute occaecat ex aliquip fugiat adipisicing anim veniam aute voluptate labore dolor consectetur esse laboris.</p>
+    <p align="right"><a href="#metka1" target="_blank" title="Some image"><img alt="Some pic" width="100" title="some title" src="images/100.jpg"></a><em><b>Laborum</b> et cupidatat nisi nisi aliqua.</em> Aute occaecat ex aliquip fugiat adipisicing anim veniam aute voluptate labore dolor consectetur esse laboris.</p>
 
     <h2>Officia culpa labore dolore duis</h2> 
     <p>Officia id laboris deserunt do Lorem nulla incididunt sunt laboris. Deserunt duis incididunt anim et dolore ad minim veniam eiusmod tempor laborum eu irure. Fugiat nisi velit eu dolore laboris anim nostrud reprehenderit dolore quis cupidatat do ut. Ad ipsum aute non qui adipisicing ut fugiat. Ullamco fugiat nisi do est aliqua qui.</p>
@@ -44,7 +44,7 @@
 
     <p>Fliqua et dolore duis adipisicing irure incididunt excepteur reprehenderit ad. Tempor cupidatat commodo duis deserunt dolore. Quis culpa aliqua qui anim quis eu sit cillum aliquip adipisicing officia veniam aliqua enim. Adipisicing in elit minim laboris dolore eiusmod et. Nisi aliquip in laboris ex irure ex commodo eiusmod fugiat deserunt. Deserunt ipsum officia ullamco excepteur laboris fugiat.</p>
 
-    <p align="center"><img alt="" src="images/5.jpg"></p>
+    <p align="center" id="metka1"><img alt="" src="images/5.jpg"></p>
 
 </body>
 </html>
