--- a/index.html
+++ b/index.html
@@ -10,6 +10,31 @@
     <h1 align="center">Sit enim sint nostrud amet elit.</h1>
     <p align="right"><a href="#metka1" target="_blank" title="Some image"><img alt="Some pic" width="100" title="some title" src="images/100.jpg"></a><em><b>Laborum</b> et cupidatat nisi nisi aliqua.</em> Aute occaecat ex aliquip fugiat adipisicing anim veniam aute voluptate labore dolor consectetur esse laboris.</p>
 
+    <form action="" method="GET">
+        some label <input type="text" name="FIO"> <br>
+        some label <input type="password" name="PSWD"> <br>
+        some box1 <input type="checkbox" name="box1"> <br>
+        some box2 <input type="checkbox" name="box2"> <br>
+        some box3 <input type="checkbox" name="box3"> <br>
+        some box4 <input type="checkbox" name="box4"> <br>
+        some radio1 <input type="radio" name="radio"> <br>
+        some radio2 <input type="radio" name="radio"> <br>
+        some radio3 <input type="radio" name="radio"> <br>
+        some radio4 <input type="radio" name="radio"> <br>
+        Some label: <br>
+        <select name="courses" multiple>
+            <option value="js">JavaScript</option>
+            <option value="css" selected>CSS</option>
+            <option value="html">HTML</option>
+        </select><br>
+
+        <textarea name="comm" id="comments" cols="30" rows="10">Sample</textarea><br>
+
+        <input type="reset">
+        <input type="submit" name="go">
+        <input type="file">
+    </form>
+    
     <h2>Officia culpa labore dolore duis</h2> 
     <p>Officia id laboris deserunt do Lorem nulla incididunt sunt laboris. Deserunt duis incididunt anim et dolore ad minim veniam eiusmod tempor laborum eu irure. Fugiat nisi velit eu dolore laboris anim nostrud reprehenderit dolore quis cupidatat do ut. Ad ipsum aute non qui adipisicing ut fugiat. Ullamco fugiat nisi do est aliqua qui.</p>
 
